--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.1.0
+  flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.2
+  http: ^1.2.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
