--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^2.2.2
   http: ^1.2.0
   get: ^4.6.6
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
