--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.0
   get: ^4.6.6
   flutter_easyloading: ^3.0.5
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
