--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   flutter_easyloading: ^3.0.5
   jwt_decoder: ^2.0.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
